# portfolio-website

./: .gitignore  README.md  docker-compose.yml  playbook.yml  pyproject.toml
.github/workflows/: docker-update.yml  droplet-update.yml  run-cypress-tests-on-dev-push.yml
frontend/: Dockerfile  cypress.config.ts  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
frontend/cypress/component/: NavBar.cy.ts  ThemeToggle.cy.ts
frontend/cypress/e2e/: allRoutesLoad.cy.ts  navigation.cy.ts  toggleDarkMode.cy.ts
frontend/cypress/support/: commands.ts  index.d.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.vue  main.ts
frontend/src/@types/: activity-calendar-widget__vue.d.ts
frontend/src/assets/: base.css  index.css
frontend/src/components/: AboutPage.vue  ContactPage.vue  ContactTag.vue  ExperienceArticle.vue  ExperienceArticlePreview.vue  ExperiencePage.vue  LandingPage.vue  LandingPage3D.vue  ProjectArticle.vue  ProjectArticlePreview.vue  ProjectsPage.vue  ThemeToggle.vue  WorkExperiencePage.vue
frontend/src/composables/: githubActivity.ts
frontend/src/data/: ExperienceData.ts  NavItems.ts  PortfolioData.ts  ProficiencyData.ts
frontend/src/helpers/: model.ts
frontend/src/router/: index.ts
frontend/src/schemas/: schemas.ts
frontend/src/services/: axiosClient.ts  errors.ts
frontend/src/types/: carouselTypes.ts  experienceTypes.ts  galleriaTypes.ts  navTypes.ts  portfolioTypes.ts  proficiencyTypes.ts
frontend/src/utils/: ExperienceData.ts  (+2 more)
terraform/: main.tf  provider.tf
(+45 files in other folders)
