[tool.poetry]
name = "Portfolio Website"
version = "0.1.0"
description = ""
authors = ["Bobotato <bhojwanialexander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
typing-extensions ="^4.3.0"
pydantic = "^1.10.3"
passlib = "^1.7.4"
httpx = "^0.23.2"
requests = "^2.28.1"
uvicorn = "^0.21.1"
pre-commit = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.960"
flake8 = "^4.0.1"
pynvim = "^0.4.3"
uvicorn = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
